encore une mise a jour du README.md